# game-engine

./: .editorconfig  .gitattributes  .travis.yml  Cargo.toml  Makefile.toml  README.md  bors.toml
app/: Cargo.toml
app/src/: app.rs  lib.rs  log.rs
core/: Cargo.toml
core/src/: builder_ext.rs  frame_rate.rs  lib.rs  query_all.rs  schedule_wrapper.rs  sized_queue.rs  systems.rs  time.rs  tuple_list.rs
core/src/systems/: entry.rs  order.rs  types.rs
derive/: Cargo.toml
derive/src/: lib.rs  system_desc.rs
examples/console/: main.rs
examples/window/: main.rs
src/: lib.rs
transform/: Cargo.toml
transform/src/: components.rs  lib.rs  systems.rs  utils.rs
transform/src/components/: children.rs  math_traits_impl.rs  matrix4_wrapper.rs  parent.rs  parent_transform.rs  position.rs  previous_parent.rs  rotation.rs  world_transform.rs
transform/src/systems/: hierarchical_transform_update.rs  hierarchy_sync.rs  simple_transform_update.rs
window/: Cargo.toml
window/src/: bundle.rs  lib.rs  resources.rs  systems.rs
