[workspace]
members = [
    "app",
    "core",
    "transform",
]

[package]
name = "game-engine"
version = "0.1.0"
authors = ["Jamee Kim <jameekim@nodaplife.me>"]
edition = "2018"

[dependencies]
game-engine-app = { path = "./app" }
game-engine-core = { path = "./core" }
game-engine-transform = { path = "./transform" }

[dev-dependencies]
log = "0.4.8"
