[package]
name = "game-engine-core"
version = "0.1.0"
authors = ["Jamee Kim <jameekim@nodaplife.me>"]
edition = "2018"

[dependencies]
legion = "0.2.1"
log = "0.4.8"
nalgebra = "0.21.0"
rayon = "1.3.0"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
game-engine = { path = ".." }
