[package]
name = "game-engine-transform"
version = "0.1.0"
authors = ["Jamee Kim <jameekim@nodaplife.me>"]
edition = "2018"

[dependencies]
game-engine-core = { path = "../core" }
log = "0.4.8"
rayon = "1.3.0"
serde = { version = "1.0", features = ["derive"] }
smallvec = "1.3.0"

[dev-dependencies]
game-engine = { path = ".." }
ron = "0.5.1"
serde_json = "1.0.51"
